1. fixed show page nav bar .current 2. fixed music player size to display correctly in all three screen size. 3. Bio-page add sort function to allow new push comment display at the top of the section. 4. fixed new comment text-area wrong font family.

--- a/BandSite-Package-Sprint-2/styles/main.css
+++ b/BandSite-Package-Sprint-2/styles/main.css
@@ -509,6 +509,7 @@ a {
   height: 100px;
   background-color: #f8faf8;
   border: 1px solid #e9e6e6;
+  font-family: avenir next regular;
   border-radius: 5px;
   padding-left: 10px;
   padding-top: 15px;
@@ -872,6 +873,9 @@ footer {
     position: relative;
     margin-top: 330px;
     margin-left: 64px;
+  }
+  .sp-hero .musicPlayer iframe {
+    height: 146px;
   }
 }
 
