--- a/BandSite-Package-Sprint-2/styles/partials/_commentSection.scss
+++ b/BandSite-Package-Sprint-2/styles/partials/_commentSection.scss
@@ -1,7 +1,6 @@
 .comment {
     width: 90%;
     margin: 0 auto;
-    // border-bottom: 1px solid rgb(233, 230, 230);
     &__title {
         font-size: 26px;
         font-family: $font-bold;
@@ -55,6 +54,7 @@
             height: 100px;
             background-color: rgb(248, 250, 248);
             border: 1px solid rgb(233, 230, 230);
+            font-family: $font-regular;
             border-radius: 5px;
             padding-left: 10px;
             padding-top: 15px;
